# order-service

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 19203a8c2b9e_i.py  d9ae63693a76_i.py
docker-build/app/: Dockerfile
src/: app.py  container.py  main.py  settings.py
src/application/: container.py  exceptions.py
src/application/dtos/: item.py  order.py  payment.py
src/application/interfaces/: http_clients.py  repositories.py  uow.py
src/application/use_cases/: check_available_qty.py  create_order.py  create_order_in_db.py  create_order_use_case.py  post_order.py  process_outbox_events.py
src/domain/entities/: order.py
src/domain/value_objects/: order_status.py
src/infrastructure/: container.py  uow.py
src/infrastructure/db/: __init__.py  models.py
src/infrastructure/http/: http_clients.py  payments_service.py
src/infrastructure/repositories/: orders.py  ordes.py  outbox.py
src/presentation/api/: __init__.py  orders.py
